--- a/po/es.po
+++ b/po/es.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: stellarium@free.fr\n"
 "POT-Creation-Date: 2006-03-26 15:18+0200\n"
-"PO-Revision-Date: 2005-07-25 18:00+0100\n"
-"Last-Translator: Sergio Trujillo <sergiotrujillo@telefonica.net>\n"
+"PO-Revision-Date: 2006-03-21 13:16+0000\n"
+"Last-Translator: elmadno <elmadno@gmail.com>\n"
 "Language-Team:\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -46,14 +46,12 @@ msgid "Loading Constellation Art: "
 msgstr "Cargando Figuras de Constelaciones: "
 
 #: src/hip_star.cpp:88 src/nebula.cpp:84 src/planet.cpp:104
-#, fuzzy
 msgid "Magnitude: "
-msgstr "Magnitud : "
+msgstr "Magnitud: "
 
 #: src/hip_star.cpp:89
-#, fuzzy
 msgid " (Variable)"
-msgstr "(Var)"
+msgstr " (Variable)"
 
 #: src/hip_star.cpp:91 src/nebula.cpp:86 src/planet.cpp:108
 msgid "RA/DE: "
@@ -64,32 +62,28 @@ msgid "Az/Alt: "
 msgstr "Az/lt: "
 
 #: src/hip_star.cpp:99 src/planet.cpp:117
-#, fuzzy
 msgid "Distance: "
-msgstr "Distancia : "
+msgstr "Distancia: "
 
 #: src/hip_star.cpp:101
 msgid " Light Years"
 msgstr " Años Luz"
 
 #: src/hip_star.cpp:108
-#, fuzzy
 msgid "Spectral Type: "
-msgstr "Espectral : "
+msgstr "Tipo Espectral "
 
 #: src/hip_star_mgr.cpp:126
 msgid "Loading Hipparcos catalog:"
 msgstr "Cargando Catálogo Hipparcos:"
 
 #: src/nebula.cpp:94
-#, fuzzy
 msgid "Type: "
-msgstr "Tipo : "
+msgstr "Tipo: "
 
 #: src/nebula.cpp:95
-#, fuzzy
 msgid "Size: "
-msgstr "Tamaño : "
+msgstr "Tamaño: "
 
 #: src/nebula_mgr.cpp:269
 msgid "Loading NGC catalog: "
@@ -116,6 +110,7 @@ msgid "Invalid Script command"
 msgstr "Comando Script No Válido"
 
 #: src/stel_ui.cpp:595
+#, fuzzy
 msgid "Drawing of the Constellations [C]"
 msgstr "Asterismos [C]"
 
@@ -164,6 +159,7 @@ msgid "Configuration window"
 msgstr "Ventana de configuración"
 
 #: src/stel_ui.cpp:619
+#, fuzzy
 msgid "Chart mode"
 msgstr "Modo carta"
 
@@ -188,20 +184,24 @@ msgid "Goto selected object [SPACE]"
 msgstr "Ir al objeto seleccionado[ESPACIO]"
 
 #: src/stel_ui.cpp:639
+#, fuzzy
 msgid "Decrease Time Speed [J]"
-msgstr "Disminuir rapidez del tiempo [J]"
+msgstr "Disminuir velocidad del tiempo [J]"
 
 #: src/stel_ui.cpp:641
+#, fuzzy
 msgid "Real Time Speed [K]"
-msgstr "Rapidez tiempo real [K]"
+msgstr "Velocidad en tiempo real [K]"
 
 #: src/stel_ui.cpp:643
+#, fuzzy
 msgid "Increase Time Speed [L]"
-msgstr "Acelerar rapidez del tiempo [L]"
+msgstr "Incrementar velocidad del tiempo [L]"
 
 #: src/stel_ui.cpp:645
+#, fuzzy
 msgid "Return to Current Time"
-msgstr "Volver a la hora y fecha actual"
+msgstr "Volver a la hora y fecha actuales"
 
 #: src/stel_ui.cpp:654
 #, fuzzy
@@ -220,7 +220,6 @@ msgid "Information"
 msgstr "Información"
 
 #: src/stel_ui.cpp:685
-#, fuzzy
 msgid ""
 "Movement & selection:\n"
 "Arrow Keys       : Change viewing RA/DE\n"
@@ -247,7 +246,6 @@ msgstr ""
 "\n"
 
 #: src/stel_ui.cpp:696
-#, fuzzy
 msgid ""
 "Display options:\n"
 "ENTER : Equatorial/altazimuthal mount\n"
@@ -276,7 +274,6 @@ msgstr ""
 "\n"
 
 #: src/stel_ui.cpp:708
-#, fuzzy
 msgid ""
 "Dialogs & other controls:\n"
 "H   : Help                      I   : About Stellarium\n"
@@ -295,7 +292,6 @@ msgstr ""
 "\n"
 
 #: src/stel_ui.cpp:715
-#, fuzzy
 msgid ""
 "Time & Date:\n"
 "6   : Time rate pause           7   : Time rate 0\n"
@@ -314,7 +310,6 @@ msgstr ""
 "\n"
 
 #: src/stel_ui.cpp:722
-#, fuzzy
 msgid ""
 "During Script Playback:\n"
 "CTRL + C : End Script\n"
@@ -327,7 +322,6 @@ msgstr ""
 "\n"
 
 #: src/stel_ui.cpp:726
-#, fuzzy
 msgid ""
 "Misc:\n"
 "9   : Toggle meteor shower rates\n"
@@ -456,10 +450,12 @@ msgid "Using System Default Time Zone"
 msgstr "Usando Zona Horaria Por Defecto del Sistema :"
 
 #: src/stel_ui_conf.cpp:223
+#, fuzzy
 msgid "Time speed : "
 msgstr "Rapidez del tiempo : "
 
 #: src/stel_ui_conf.cpp:231
+#, fuzzy
 msgid ""
 "Use key J and L to decrease and increase\n"
 "   time speed.\n"
@@ -546,10 +542,12 @@ msgid "Landscapes"
 msgstr "Paisajes"
 
 #: src/stel_ui_conf.cpp:402
+#, fuzzy
 msgid "Video"
 msgstr "Video"
 
 #: src/stel_ui_conf.cpp:403
+#, fuzzy
 msgid "Rendering"
 msgstr "Visualización"
 
@@ -602,10 +600,12 @@ msgid "Planets & Moons"
 msgstr "Planetas y Lunas"
 
 #: src/stel_ui_conf.cpp:956
+#, fuzzy
 msgid "Enter observatory name"
 msgstr "Ingresar nombre del observatorio"
 
 #: src/stel_ui_conf.cpp:1091
+#, fuzzy
 msgid "Current Time Speed is x"
 msgstr "Rapidez del tiempo actual es x"
 
@@ -614,6 +614,7 @@ msgid "Set Location "
 msgstr "Establecer localización "
 
 #: src/stel_ui_tuiconf.cpp:75
+#, fuzzy
 msgid "Set Time "
 msgstr "Establecer el tiempo "
 
@@ -942,6 +943,7 @@ msgid "Aries"
 msgstr "Aries"
 
 #: src/translations.h:75 src/translations.h:145
+#, fuzzy
 msgid "Scutum"
 msgstr "Scutum"
 
@@ -958,16 +960,18 @@ msgid "Caelum"
 msgstr "Caelum"
 
 #: src/translations.h:79
+#, fuzzy
 msgid "Chamaeleon"
-msgstr "Chamaeleon"
+msgstr "Camaleón"
 
 #: src/translations.h:80
 msgid "Cancer"
 msgstr "Cáncer"
 
 #: src/translations.h:81
+#, fuzzy
 msgid "Capricornus"
-msgstr "Capricornus"
+msgstr "Capricornio"
 
 #: src/translations.h:82
 msgid "Carina"
@@ -975,11 +979,11 @@ msgstr "Carina"
 
 #: src/translations.h:83
 msgid "Cassiopeia"
-msgstr "Cassiopeia"
+msgstr "Casiopea"
 
 #: src/translations.h:84
 msgid "Centaurus"
-msgstr "Centaurus"
+msgstr "Centauro"
 
 #: src/translations.h:85
 msgid "Cepheus"
@@ -987,7 +991,7 @@ msgstr "Cepheus"
 
 #: src/translations.h:86
 msgid "Coma Berenices"
-msgstr "Coma Berenices"
+msgstr "Cabellera de Berenice"
 
 #: src/translations.h:87
 msgid "Canes Venatici"
@@ -1011,51 +1015,51 @@ msgstr "Crater"
 
 #: src/translations.h:92
 msgid "Corona Australis"
-msgstr "Corona Australis"
+msgstr "Corona Austral"
 
 #: src/translations.h:93
 msgid "Corona Borealis"
-msgstr "Corona Borealis"
+msgstr "Corona Boreal"
 
 #: src/translations.h:94
 msgid "Corvus"
-msgstr "Corvus"
+msgstr "Cuervo"
 
 #: src/translations.h:95
 msgid "Crux"
-msgstr "Crux"
+msgstr "Cruz del Sur"
 
 #: src/translations.h:96
 msgid "Cygnus"
-msgstr "Cygnus"
+msgstr "Cisne"
 
 #: src/translations.h:97
 msgid "Delphinus"
-msgstr "Delphinus"
+msgstr "Delfín"
 
 #: src/translations.h:98
 msgid "Dorado"
-msgstr "Dorado"
+msgstr "Pez Espada"
 
 #: src/translations.h:99
 msgid "Draco"
-msgstr "Draco"
+msgstr "Dragón"
 
 #: src/translations.h:100
 msgid "Norma"
-msgstr "Norma"
+msgstr "Escuadra"
 
 #: src/translations.h:101
 msgid "Eridanus"
-msgstr "Eridanus"
+msgstr "Eridano"
 
 #: src/translations.h:102
 msgid "Sagitta"
-msgstr "Sagitta"
+msgstr "Flecha"
 
 #: src/translations.h:103
 msgid "Fornax"
-msgstr "Fornax"
+msgstr "Horno"
 
 #: src/translations.h:104
 msgid "Gemini"
@@ -1063,51 +1067,51 @@ msgstr "Gemini"
 
 #: src/translations.h:105
 msgid "Camelopardalis"
-msgstr "Camelopardalis"
+msgstr "Jirafa"
 
 #: src/translations.h:106
 msgid "Canis Major"
-msgstr "Canis Major"
+msgstr "Can Mayor"
 
 #: src/translations.h:107
 msgid "Ursa Major"
-msgstr "Ursa Major"
+msgstr "Osa Mayor"
 
 #: src/translations.h:108
 msgid "Grus"
-msgstr "Grus"
+msgstr "Grulla"
 
 #: src/translations.h:109
 msgid "Hercules"
-msgstr "Hercules"
+msgstr "Hércules"
 
 #: src/translations.h:110
 msgid "Horologium"
-msgstr "Horologium"
+msgstr "Reloj"
 
 #: src/translations.h:111
 msgid "Hydra"
-msgstr "Hydra"
+msgstr "Hidra"
 
 #: src/translations.h:112
 msgid "Hydrus"
-msgstr "Hydrus"
+msgstr "Hidra Macho"
 
 #: src/translations.h:113
 msgid "Indus"
-msgstr "Indus"
+msgstr "Indio"
 
 #: src/translations.h:114
 msgid "Lacerta"
-msgstr "Lacerta"
+msgstr "Lagarto"
 
 #: src/translations.h:115
 msgid "Monoceros"
-msgstr "Monoceros"
+msgstr "Unicornio"
 
 #: src/translations.h:116
 msgid "Lepus"
-msgstr "Lepus"
+msgstr "Liebre"
 
 #: src/translations.h:117
 msgid "Leo"
@@ -1115,15 +1119,15 @@ msgstr "Leo"
 
 #: src/translations.h:118
 msgid "Lupus"
-msgstr "Lupus"
+msgstr "Lobo"
 
 #: src/translations.h:119
 msgid "Lynx"
-msgstr "Lynx"
+msgstr "Lince"
 
 #: src/translations.h:120
 msgid "Lyra"
-msgstr "Lyra"
+msgstr "Lira"
 
 #: src/translations.h:121
 msgid "Antlia"
@@ -1131,11 +1135,11 @@ msgstr "Antlia"
 
 #: src/translations.h:122
 msgid "Microscopium"
-msgstr "Microscopium"
+msgstr "Microscopio"
 
 #: src/translations.h:123
 msgid "Musca"
-msgstr "Musca"
+msgstr "Mosca"
 
 #: src/translations.h:124
 msgid "Octans"
@@ -1299,9 +1303,6 @@ msgstr ""
 msgid "Seconds"
 msgstr ""
 
-#~ msgid ": mag "
-#~ msgstr ": mag "
-
 #~ msgid "Loading HIP/SAO catalogs: %d/%d"
 #~ msgstr "Cargando Catálogos HIP/SAO : %d/%d"
 
@@ -1311,19 +1312,8 @@ msgstr ""
 #~ msgid "Loading SAO catalog: %d/%d"
 #~ msgstr "Cargando Catálogo SAO: %d/%d"
 
-#, fuzzy
-#~ msgid ""
-#~ "   Please check for newer versions and send bug reports\n"
-#~ "\t                                   and comments to us at: http://www."
-#~ "stellarium.org\n"
-#~ "\n"
-#~ msgstr ""
-#~ "   Revisa por nuevas versiones y envíanos reportes de errores\n"
-#~ "y comentarios a: http://www.stellarium.org\n"
-#~ "\n"
-
-#~ msgid "ly"
-#~ msgstr "al"
+#~ msgid ": mag "
+#~ msgstr ": mag "
 
 #~ msgid "Name : "
 #~ msgstr "Nombre : "
@@ -1331,11 +1321,23 @@ msgstr ""
 #~ msgid "(Dbl)"
 #~ msgstr "(Dbl)"
 
+#~ msgid "(Var)"
+#~ msgstr "(Var)"
+
 #~ msgid "RA : "
 #~ msgstr "AR : "
 
 #~ msgid "DE : "
 #~ msgstr "DEC : "
+
+#~ msgid "Spectral : "
+#~ msgstr "Espectral : "
+
+#~ msgid "Magnitude : "
+#~ msgstr "Magnitud : "
+
+#~ msgid "Distance : "
+#~ msgstr "Distancia : "
 
 #~ msgid "Az  : "
 #~ msgstr "Az : "
@@ -1343,17 +1345,26 @@ msgstr ""
 #~ msgid "Alt : "
 #~ msgstr "Alt : "
 
-#~ msgid " (UTC)"
-#~ msgstr " (UTC)"
+#~ msgid "ly"
+#~ msgstr "al"
 
 #~ msgid "Cat: NGC "
 #~ msgstr "Catálogo: NGC "
+
+#~ msgid "Type : "
+#~ msgstr "Tipo : "
+
+#~ msgid "Size : "
+#~ msgstr "Tamaño : "
 
 #~ msgid "Loading Sharpless catalog:"
 #~ msgstr "Cargando Catálogo Sharpless:"
 
 #~ msgid "Loading Cadwell catalog:"
 #~ msgstr "Cargando Catálogo Caldwell:"
+
+#~ msgid " (UTC)"
+#~ msgstr " (UTC)"
 
 #~ msgid " Current Time :"
 #~ msgstr " Hora-Fecha actual :"
